--- a/Logger/.classpath
+++ b/Logger/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="F:/GitSource/Logger/Logger/c3p0-0.9.1.2.jar"/>
 	<classpathentry kind="lib" path="E:/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="F:/GitSource/Logger/Logger/dom4j-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
